# todo-web-app

./: .gitignore  Cargo.toml  LICENSE  README.md  package-lock.json
assets/: output.css
migrations/: 20260116084831_create_todos_table.down.sql  20260116084831_create_todos_table.up.sql
src/: db.rs  error.rs  main.rs  routes.rs  templates.rs  todo.rs  todo_list.rs
templates/: index.html
templates/components/: input.html  todo.html  todo_item.html  update.html
