[package]
name = "personal_task_tracker"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.15.1"
axum = {version = "0.8.8", features = ["macros"]}
httpc-test = "0.1.10"
serde = "1.0.228"
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["fs"] }
